--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,15 +10,15 @@ jobs:
         with:
           sources: "*.c,*.h"
 
-            # build-and-test:
-            #   needs: [ clang-format ]
-            #   runs-on: ubuntu-latest
-            #   steps:
-            #     - uses: actions/checkout@v3
-            #     - uses: seanmiddleditch/gha-setup-ninja@master
-            #     - run: |
-            #         mkdir cmake-build-debug
-            #         cd cmake-build-debug
-            #         cmake -GNinja ..
-            #         ninja
-            #         ninja test
+  build-and-test:
+    needs: [ clang-format ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: seanmiddleditch/gha-setup-ninja@master
+      - run: |
+          mkdir cmake-build-debug
+          cd cmake-build-debug
+          cmake -GNinja ..
+          ninja
+          ninja test
