--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,5 @@ endmacro()
 # Testing
 enable_testing()
 setup_test(utf8_test common.h utf8.h utf8.c)
+setup_test(ptr_stack_test common.h ptr_stack.h ptr_stack.c)
 setup_test(parser_test common.h utf8.h utf8.c log.h log.c parser.h parser.c)
