--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,5 @@ endmacro()
 enable_testing()
 setup_test(utf8_test common.h utf8.h utf8.c)
 setup_test(ptr_stack_test common.h ptr_stack.h ptr_stack.c)
-setup_test(parser_test common.h utf8.h utf8.c log.h log.c parser.h parser.c)
+setup_test(lexer_test common.h utf8.h utf8.c uc_names.h log.h log.c lexer.h lexer.c)
+# setup_test(parser_test common.h utf8.h utf8.c log.h log.c parser.h parser.c)
