parser: Parse `compilation_unit`, `module_decl` and `static_lookup` rules.
Startup point of the new parser using the lexer as front end

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,4 @@ enable_testing()
 setup_test(utf8_test common.h utf8.h utf8.c)
 setup_test(ptr_stack_test common.h ptr_stack.h ptr_stack.c)
 setup_test(lexer_test common.h utf8.h utf8.c uc_names.h log.h log.c lexer.h lexer.c)
-setup_test(parser_test common.h utf8.h utf8.c uc_names.h log.h log.c lexer.h lexer.c parser.h parser.c)
+setup_test(parser_test common.h utf8.h utf8.c uc_names.h log.h log.c ptr_stack.h ptr_stack.c lexer.h lexer.c parser.h parser.c)
